# Age-Calculator

./: README.md  pyproject.toml
age_made_simple/: age_calculator.py
src/age_made_simple/: age_calculator.py
tests/: test_age_made_simple.py
