[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "age_made_simple"
version = "2023.0.0.1"
authors = [{name="Laique Djeutchouang", email="ldjeutchouang@aims.ac.tz"}, ]
description = "A Python package to calculate a person's age based on their date of birth and return the day of the week they were born."
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent", ]

[project.urls]
"Homepage" = "https://github.com/Djeutsch/Age-Calculator"
"Bug Tracker" = "https://github.com/Djeutsch/Age-Calculator/issues"

