[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "age_made_simple"
version = "2023.0.0.1"
authors = ["Laique Djeutchouang <ldjeutchouang@aims.ac.tz>", ]
description = "A Python package to calculate a person's age based on their date of birth and return the day of the week they were born."
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent", ]

repository = "https://github.com/Djeutsch/Age-Calculator"

[tool.poetry.dependencies]
python = ">=3.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

